# cleancam

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/: compile.py
src/: main.py
src/core/python/: paths.py
src/features/: camera_controller.py  camera_window.py  main_window.py
src/lib/video/: camera_logic.py
src/scripts/: compile.py  make_icon.py
src/ui/: app.py
src/ui/atoms/: button.py  frameless_window.py  tray_icon.py  video_label.py
src/ui/molecules/: camera_controls.py
src/ui/organisms/: camera_ui.py
